docs/v2/server-side/Generate-server-side-token.mdx
---
title: Generate server-side token
nav: 5
---

## Overview

Any service calling 100ms' REST APIs need to authenticate using a management token. The service required to generate this token should be hosted on your server

<Note>

**Don't have the time to write your own token generation service?**

We have put together a [quickstart app server](/v2/server-side/100ms-quickstart-app-server) guide that will setup & deploy your token generation service in a few minutes

</Note>

## Obtaining Keys

You can get following keys from the [Developer](https://dashboard.100ms.live/developer) section of [100ms Dashboard](https://dashboard.100ms.live/)​

-   `app_access_key` - You will be assigned a unique management key
-   `app_secret` - This unique secret is used to sign the token

## **Sample management token generation code**

You can use the following code snippets to generate your token.

<Tabs id="test-code" items={['Node.js', 'Python', 'Java', 'Ruby', 'Php']} />

<Code tab id='test-code-0'>

```js
var jwt = require('jsonwebtoken');
var uuid4 = require('uuid4');

var app_secret =
    'lfpt0lHMrBfJYiBFlEtReIgztywwY078SpaLGHIpieK89oN8kLDBzaMP7nxSGfS1ya-VT5CUiTRrILasqNKHnDDoBd8m3cCAhtCcPJpu8Nn1TCvC7fwwkygxO7u8MHxUmiEnbnN6tPAbJh7GQAJRKJyGikXcRlerj3EvEWX32hY=';
var app_access_key = '5f679ec41aa12942cde1c3c3';

jwt.sign(
    { access_key: app_access_key, type: 'management', version: 2 },
    app_secret,
    { algorithm: 'HS256', expiresIn: '24h', jwtid: uuid4() },
    function (err, token) {
        console.log(token);
    }
);
```

</Code>

<Code tab id='test-code-1'>

```py
#!/usr/bin/env python3
import jwt
import uuid
import datetime

customer_id = "5f74558a7ef1723ded60a127"
app_secret = "g-fRy7V2844qw_17KZ3igkx8jUz3UW5v0MKD7pJCa4wMKJWniY7irfFx38ewAZup2QtAwu5IIVCv5Vkn1Y5QVjukd0JSByTzatvTaphHnctSIHDqXNp0b-lSoxpePZpFnnd-9bTe0QTWsCGEhjra9Yncc-MbJ1J7gl_nIkfGzpM="
app_access_key = "5f74558a7ef1723ded60a129"

def generate(expires=0):
    expires = expires or 24 * 3600
    now = datetime.datetime.utcnow()
    exp  = now+ datetime.timedelta(seconds=expires)
    return jwt.encode(payload={
				                "access_key": app_access_key,
												"type": "management",
												"version": 2,
				                "jti": str(uuid.uuid4()),
				                "exp": exp,
				                "iat": now,
				                "nbf": now},
										  key=app_secret).decode("utf-8")

if __name__ == "__main__":
    print(generate())
```

</Code>

<Code tab id="test-code-2">

```java
import java.time.Instant;
import java.util.Date;
import java.util.HashMap;
import java.util.Map;
import java.util.UUID;
import io.jsonwebtoken.Jwts;
import io.jsonwebtoken.SignatureAlgorithm;

private void generateHmsServerToken() {
    Map<String, Object> payload = new HashMap<>();
    payload.put("access_key", <app_access_key>);
    payload.put("app_id", <app_id>);
    payload.put("type", "management");
    payload.put("version", 2);
    String token = Jwts.builder().setClaims(payload).setId(UUID.randomUUID().toString())
        .setExpiration(new Date(System.currentTimeMillis() + 86400 * 1000))
        .setIssuedAt(Date.from(Instant.ofEpochMilli(System.currentTimeMillis() - 60000)))
        .signWith(SignatureAlgorithm.HS256, <app_secret>.getBytes()).compact();
  }
```

</Code>

<Code tab id="test-code-3">

```ruby
require 'jwt'

payload = {
  access_key: <app_access_key> ,
  app_id: <app_id> ,
  type: "management",
  version: 2
}

secret = <app_secret>
token = JWT.encode(payload, secret, 'HS256')
```

</Code>

<Code tab id="test-code-4">

```php
<?php

use Firebase\JWT\JWT;

$issuedAt   = new DateTimeImmutable();
$expire     = $issuedAt->modify('+24 hours')->getTimestamp();

$payload = [
    'access_key' => <app_access_key>,            // Your App Access Key
    'app_id' => <app_id>,                        // Your App Id
		'type' => 'management',
    'version' => 2
    'iat'  => $issuedAt->getTimestamp(),         // Issued at: time when the token was generated
    'iss'  => $serverName,                       // Issuer
    'nbf'  => $issuedAt->getTimestamp(),         // Not before
    'exp'  => $expire,                           // Expire
];

$secret = <your app secret>;
$token = JWT::encode($payload, $secret, 'HS256');
```

</Code>
